# libopengl_simplify

./: CAMERA_MOVEMENT_GUIDE.md  CMakeLists.txt  README.md  SDF_TEXT_IMPLEMENTATION.md  build.bat  build.sh  build_cmake.bat  build_cmake.sh
3rd/assimp-5.4.3/lib/: assimp-vc142-mt.lib  assimp-vc142-mtd.lib  zlibstatic.lib  zlibstaticd.lib
3rd/glad-4.6/src/: glad.c
3rd/glfw-3.4/lib/: glfw3.lib
3rd/include/logger/: glog_logger.h
cmake/: FindFreeType.cmake  Findassimp.cmake  Findglad.cmake  Findglfw3.cmake  PrintFlags.cmake
src/camera/: libglsimplify_base_camera.cpp  libglsimplify_base_camera.h  libglsimplify_default_camera.cpp  libglsimplify_default_camera.h
src/core/: libglsimplify_buffer_array.cpp  libglsimplify_buffer_array.h  libglsimplify_camera.cpp  libglsimplify_camera.h  libglsimplify_color_shader.cpp  libglsimplify_color_shader.h  libglsimplify_frame_buffer.cpp  libglsimplify_frame_buffer.h  libglsimplify_program.cpp  libglsimplify_program.h  libglsimplify_render_buffer.cpp  libglsimplify_render_buffer.h  libglsimplify_shader.cpp  libglsimplify_shader.h  libglsimplify_shader_source.cpp  libglsimplify_shader_source.h  libglsimplify_texture_buffer.cpp  libglsimplify_texture_buffer.h  libglsimplify_texture_shader.cpp  libglsimplify_texture_shader.h  libglsimplify_types.h  libglsimplify_uniform_array.cpp  libglsimplify_uniform_array.h  libglsimplify_vertex_array.cpp  libglsimplify_vertex_array.h  libglsimplify_vertex_shader.cpp  libglsimplify_vertex_shader.h
src/entity/: libglsimplify_base_entity.cpp  libglsimplify_base_entity.h  libglsimplify_camera.cpp  libglsimplify_camera.h  libglsimplify_cone.cpp  libglsimplify_cone.h  libglsimplify_cube.cpp  libglsimplify_cube.h  libglsimplify_cylinder.cpp  libglsimplify_cylinder.h  libglsimplify_entity.cpp  libglsimplify_entity.h  libglsimplify_line.cpp  libglsimplify_line.h  libglsimplify_plane.cpp  libglsimplify_plane.h  libglsimplify_sphere.cpp  libglsimplify_sphere.h
src/entity/basic/: libglsimplify_plane.cpp  libglsimplify_plane.h  libglsimplify_sphere.cpp  libglsimplify_sphere.h
src/glfw/: libglsimplify_control.h  libglsimplify_mouse.h  libglsimplify_window.cpp  libglsimplify_window.h
src/light/: libglsimplify_directional_light.cpp  libglsimplify_directional_light.h  libglsimplify_light.cpp  libglsimplify_light.h  libglsimplify_point_light.cpp  libglsimplify_point_light.h  libglsimplify_spot_light.cpp  libglsimplify_spot_light.h
src/logger/: libglsimplify_logger.h
src/material/: libglsimplify_material.cpp  libglsimplify_material.h  libglsimplify_material_factory.cpp  libglsimplify_material_factory.h
src/model/: libglsimplify_phong_model.cpp  libglsimplify_phong_model.h  libglsimplify_render_model.cpp  libglsimplify_render_model.h
src/render/: libglsimplify_phong_model.cpp  libglsimplify_phong_model.h  libglsimplify_phong_shader.cpp  libglsimplify_phong_shader.h  libglsimplify_render_model.cpp  libglsimplify_render_model.h  libglsimplify_render_shader.cpp  libglsimplify_render_shader.h
src/renderer/: libglsimplify_base_renderer.cpp  libglsimplify_base_renderer.h
src/scene/: libglsimplify_ambient.cpp  libglsimplify_ambient.h  libglsimplify_background.cpp  libglsimplify_background.h  libglsimplify_scene.cpp  libglsimplify_scene.h  libglsimplify_skybox.cpp  libglsimplify_skybox.h
src/shader/: libglsimplify_color_shader.cpp  libglsimplify_color_shader.h  libglsimplify_texture_shader.cpp  libglsimplify_texture_shader.h  libglsimplify_vertex_shader.cpp  libglsimplify_vertex_shader.h
tests/: CMakeLists.txt
tests/src/: main.cpp  test_all.cpp  test_camera.cpp  test_cases.cpp  test_cone.cpp  test_cube.cpp  test_cylinder.cpp  test_large_lines.cpp  test_line.cpp  test_plane.cpp  test_points.cpp  test_sdf_text.cpp  test_sphere.cpp  test_texture.cpp  test_transform.cpp
(+39 files in other folders)
